sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:7: error: '(' expected but identifier found.
      if plusPetit(k,k+1){
         ^AlgCocktailSort1:10: error: illegal start of simple expression
    }
    ^AlgCocktailSort1:12: error: '(' expected but identifier found.
      if plusPetit(k,k+1){
         ^AlgCocktailSort1:15: error: illegal start of simple expression
    }
    ^