sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.code
def cocktailSort() {
  var swapped:bBoolean =true
  
  while (swapped){
    for (k<-0 to getNombreValeurs-2){
      if plusPetit(k,k+1){
        echange(k,k+1)
      }
    }
    for (i<-getNombreValeurs-2 to 0 by -1){
      if plusPetit(k,k+1){
        echange(k,k+1)
      }
    }
  }
}